# nixpkgs-db

./: .gitignore  CODE_OF_CONDUCT.md  README.md
.github/: FUNDING.yml
cli/: CHANGELOG.md  Cargo.toml  nix-db.cabal
data/: pkgs.json
data/badges/: 1.json  axis2.json  bpftool.json  cabal2nix.json  calibre.json  chromiumBeta.json  chromiumDev.json  eclipses.eclipse-sdk-35.json  evolution-data-server.json  exodus.json  firefox-bin.json  firefox-esr-wrapper.json  firefoxWrapper.json  flow.json  freefall.json  girara.json  gitMinimal.json  gitlab-ee.json  glib.json  google-chrome.json  gtkgnutella.json  haskellPackages_ghc6104.persistent.json  haskellPackages_ghc6123.haskellSrcMeta.json  haskellPackages_ghc704_profiling.monadControl.json  haskellPackages_ghcHEAD.hakyll.json  (+517 more)
docs/: index.html  sitemap.1.xml  sitemap.10.xml  sitemap.100.xml  sitemap.101.xml  sitemap.102.xml  sitemap.104.xml  sitemap.11.xml  sitemap.110.xml  sitemap.111.xml  sitemap.112.xml  sitemap.115.xml  sitemap.117.xml  sitemap.119.xml  sitemap.12.xml  sitemap.121.xml  sitemap.125.xml  sitemap.13.xml  sitemap.143.xml  sitemap.156.xml  sitemap.158.xml  sitemap.162.xml  sitemap.165.xml  sitemap.166.xml  sitemap.170.xml  sitemap.174.xml  sitemap.175.xml  sitemap.179.xml  sitemap.180.xml  sitemap.183.xml  sitemap.185.xml  sitemap.188.xml  sitemap.189.xml  sitemap.192.xml  sitemap.2.xml  sitemap.200.xml  sitemap.201.xml  sitemap.202.xml  sitemap.207.xml  sitemap.211.xml  (+135 more)
nix/: sources.json
nixdb/: .gitignore  CONTRIBUTING.md  README.md
nixdb/cli/: Cargo.toml
service/: package-lock.json  package.json
(+169739 files in other folders)
