# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "A database with packages at all versions, from all channels."
edition = "2018"
homepage = "https://kamadorueda.github.io/nixpkgs-db"
license = "GPL-3.0-only"
name = "nix-db"
repository = "https://github.com/kamadorueda/nixpkgs-db"
version = "0.1.0"
